SPCTR-3995 Fix: Container - Resolved an issue wherein WordPress core blocks inside the container alignment (#4071)
* Resolved an issue wherein WordPress core blocks inside the container were aligning to the center in tablet/mobile view in the editor.

* Added width: 100%; and box-sizing: border-box;  to resolved width issue

* excluded quote and button

* Fixed block quote issue

* fixed issue in mobile for block quote

---------

--- a/src/blocks/container/editor.lazy.scss
+++ b/src/blocks/container/editor.lazy.scss
@@ -243,8 +243,10 @@
 		width: 100%;
 		height: 100%;
 
-		.wp-block[data-type*="uagb/"] {
-			width: inherit;
+		.wp-block[data-type*="uagb/"],
+		.wp-block[data-type*="core/"]:not([data-type="core/button"]) {
+			width: 100%;
+			box-sizing: border-box;
 		}
 	}
 }
